--- a/src/packaging/packagehead.tex
+++ b/src/packaging/packagehead.tex
@@ -1,6 +1,6 @@
-% Source (with comments) can be found at https://github.com/Strauman/exerciseBank
+% Source (with comments) can be found at @@GITHUB
 %% The LaTeX package exercisebank - version @@VERSION (@@DATE) - build @@BUILD
-%% exercisebank.sty: Exercise bank
+%% @@PACKAGE.sty: Exercise bank
 %%
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
