--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.1.1b62 - 2018/04/13
-%% The LaTeX package exercisebank - version v0.1.1 (2018/04/13) build 62
+%% exercisebank v0.1.2-prereleaseb63 - 2018/04/13
+%% The LaTeX package exercisebank - version v0.1.2-prerelease (2018/04/13) build 63
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -56,7 +56,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.1.1{\\[-0.5em]\footnotesize(build 62)}}}
+\title{{exercisebank - manual\\ v0.1.2-prerelease{\\[-0.5em]\footnotesize(build 63)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
