--- a/src/main.tex
+++ b/src/main.tex
@@ -19,7 +19,7 @@
 % \makeset[intro,nohead]{2}{\phead,\select{thirdexercise}{1,2,3},\exclude{secondexercise}{2,3},\exec{\newpage}\phead,\select{firstexercise}{1}}
 % \makeset[intro]{2}{\exclude{secondexercise}{1}}
 \begin{document}
-% \buildset{1}
-\sprite
+\buildset{11}
+% \sprite
 % A
 \end{document}
