--- a/src/at.tex
+++ b/src/at.tex
@@ -7,6 +7,7 @@
 \let\ea = \expandafter
 \def\removebs#1{\if#1\@backslashchar\else#1\fi}
 %:This package also includes some extra stuff. For example the \At and \Trigger
+%:!TOC
 %:=\At{AnyMacro}
 %:Here you can send any macro because it isn't evaluated! For example \At\BeginSomething is fine and even if \BeginSomething is not defined. Also and when using \Trigger it just ignores it if it didn't exist. It's pretty similar in function as to \AtBeginDocument.
 %:! \At\BeginSomething{DoSomething}
