--- a/src/pplabel.tex
+++ b/src/pplabel.tex
@@ -24,7 +24,7 @@
 \newcommand\ppref[1]{%
 \ref{pr:\exerciseFile:#1}\ref{pp:\exerciseFile:#1}\relax%
 }
-%:=\ppref{label}
+%:=\pref{label}
 %: Reference a partproblem created by \pplabel{\meta{label}}. This prints e.g. 1
 %:-
 \newcommand\pref[1]{%
