--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.1.1b64 - 2018/04/14
-%% The LaTeX package exercisebank - version v0.1.1 (2018/04/14) build 64
+%% exercisebank v>0.1.1-edgeb65 - 2018/04/14
+%% The LaTeX package exercisebank - version v>0.1.1-edge (2018/04/14) build 65
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -66,7 +66,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.1.1{\\[-0.5em]\footnotesize(build 64)}}}
+\title{{exercisebank - manual\\ v>0.1.1-edge{\\[-0.5em]\footnotesize(build 65)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -199,7 +199,7 @@ That covers the basics. Enjoy
 \dac{begin}\{intro\} and \dac{end}\{intro\} has to be on their own line without any spaces!
 \end{marker}
  \section{Reference}
-\clearpage\subsection{Environments}
+\filbreak\subsection{Environments}
  \addcontentsline{toc}{subsubsection}{\refEnv{intro}}
 \addcontentsline{toc}{subsubsection}{\refEnv{problem}}
 \addcontentsline{toc}{subsubsection}{\refEnv{solution}}
@@ -219,9 +219,9 @@ Turns on the solutions, so they are shown.
 \begin{docEnvironment}{intro}{}
 Sometimes you'd want to introcude your exercises and tell a little bit about it. Maybe have a figure there also. Those things should go inside this environment. This can be treated as a problem in terms of counting. See \refCom{makeset} for more info.
 \end{docEnvironment}
-\clearpage\subsection{Making sets}
+\filbreak\subsection{Making sets}
 \begin{docCommand}{makeset}{\oarg{intro,nohead}\marg{filable}}\addcontentsline{toc}{subsubsection}{\refCom{makeset}}
-
+\updated{v0.1.1\\2018/04/13 }
  This command is the one you use to make a set! Later you use \dac{buildset} to build the sets you make. The \meta{filable} argument is either the name of the file relative to the \dac{setExercisesDir}-path (default is nothing, so it's in the root path), or you could use the \dac{select} or \dac{exclude} to  respectively cherry pick or exclude exercises. (See their docs).\\
  \oarg{intro} this counts the intro environment as a part problem, so that you can \dac{select} or \dac{exclude} the intro\\
  \oarg{nohead} prevents the builder from adding a problem header. This is handy if you want to create an exercise that is composed of multiple parts. You can use the \dac{phead} to insert the problem header where you want it
@@ -235,7 +235,7 @@ This contains information about an exercise set. It is intended to be on the top
 exercise, explaining short what the exercise is about. It's only visible when using \dac{sprite}
 \end{docCommand}
 \begin{docCommand}{sprite}{\oarg{PiP}}\addcontentsline{toc}{subsubsection}{\refCom{sprite}}
-
+\updated{v0.1.1\\2018/04/13 }
  This is a way to visualize all exercises. It takes one optional argument which is how many pages
  inside one page. Defaults to 4
  \begin{marker}If \dac{sprite} is used, it should be the only command in \dac{begin}\{document\}\dac{end}\{document\}\end{marker}
@@ -251,7 +251,7 @@ As you can see in the intro section of the documentation, this is for cherry pic
 To be used in \refCom{makeset}
 \end{docCommand}
 \begin{docCommand}{exec}{\marg{macros}}\addcontentsline{toc}{subsubsection}{\refCom{exec}}
-
+\defnew{v0.1.1\\2018/04/13 }
 You can use this in \dac{makeset} to execute commands between problems.
 E.g. to insert a new page in between two problems when using nohead:
 \begin{dispListing}
@@ -285,7 +285,7 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.
 
  Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1
 \end{docCommand}
-\clearpage\subsection{Configuration and options}
+\filbreak\subsection{Configuration and options}
 You can do a lot of configurations on this package, and probably
  even more to come in later versions!
 \begin{docCommand}{exercisebanksetup}{\marg{[key/values]}}\addcontentsline{toc}{subsubsection}{\refCom{exercisebanksetup}}
@@ -321,7 +321,7 @@ This key is used for setting the default exercise directory.
  \exercisebanksetup{exercise directory=exercises,part problems=Off,solution header={\textbf{SOL:}}}
 \end{dispListing}
 \end{docCommand}
-\clearpage\subsection{Internationalization}
+\filbreak\subsection{Internationalization}
 \begin{docCommand}{translateExBank}{\marg{Translation key/vals}}\addcontentsline{toc}{subsubsection}{\refCom{translateExBank}}
 
 This is to translate the text inside the package. As of now the available key/values are
@@ -334,9 +334,9 @@ The Norwegian translation would then be done with
 \translateExBank{Problem=Oppgave, Solution=Løsning}
 \end{dispListing}
 \end{docCommand}
-\clearpage\subsection{Triggers}
+\filbreak\subsection{Triggers}
 \begin{docCommand}{Trigger}{\marg{Any Macro}}\addcontentsline{toc}{subsubsection}{\refCom{Trigger}}
-
+\updated{v0.1.1\\2018/04/13 }
  See \refCom{At}\\
  Available triggers:\\
 \dac{Trigger}\dac{BeginPartproblem}:\\ Triggers before a partproblem is inserted\\
@@ -349,7 +349,7 @@ The Norwegian translation would then be done with
 
 
 \end{docCommand}
-\clearpage\subsection{General reference}
+\filbreak\subsection{General reference}
 \begin{docCommand}{ownLineNoSpacesGotIt}{}\addcontentsline{toc}{subsubsection}{\refCom{ownLineNoSpacesGotIt}}
 
 This is to annoy the user enough to get his attention about the requirements of the \refEnv{problem}, \refEnv{solution} and \refEnv{intro} environments.\\
@@ -363,7 +363,7 @@ where the package should be looking for exercises. Default is the same directory
 \end{docCommand}
 This package also includes some extra stuff. For example the \dac{At} and \dac{Trigger}
 \begin{docCommand}{At}{\marg{AnyMacro}}
-Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
+\updated{v0.1.1\\2018/04/13 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
 \begin{dispListing}
  \At\BeginSomething{DoSomething}
  Which is triggered with
@@ -381,10 +381,10 @@ Here you can send any macro because it isn't evaluated! For example \dac{At}\dac
 
 This is a `read-only' macro that contains the name of the current exerciseFile
 \end{docCommand}
-\clearpage\subsection{Counters}
+\filbreak\subsection{Counters}
 \docCounter{problemcounter}-counter holds the current problem number and
 \docCounter{partproblemcounter}-counter holds the current partproblem \emph{number}.
-\clearpage\subsection{Macro definitions}
+\filbreak\subsection{Macro definitions}
 
  \addcontentsline{mac}{macro}{\refCom{At}}{}
 \addcontentsline{mac}{macro}{\refCom{DisplaySolutions}}{}
