--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v>0.1.1-edgeb65 - 2018/04/14
-%% The LaTeX package exercisebank - version v>0.1.1-edge (2018/04/14) build 65
+%% exercisebank v0.1.1+b66 - 2018/04/17
+%% The LaTeX package exercisebank - version v0.1.1+ (2018/04/17) build 66
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -66,7 +66,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v>0.1.1-edge{\\[-0.5em]\footnotesize(build 65)}}}
+\title{{exercisebank - manual\\ v0.1.1+{\\[-0.5em]\footnotesize(build 66)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
