--- a/src/packageoptions.tex
+++ b/src/packageoptions.tex
@@ -5,6 +5,11 @@
 %:§config
 %:You can do a lot of configurations on this package, and probably
 %: even more to come in later versions!
+%:=\ShowNumbers
+%: Shows the numbers in fron of the part problems and intros that should be used with
+%: \exclude and \select
+\gdef\ShowNumbers{\gdef\@displayMetaCounter{\isTrue}}
+% ---- \exercisebanksetup ----- %
 \pgfkeys{
 /exbanksetup/.is family, /exbanksetup,
 default/.style = {
