--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -31,4 +31,8 @@ v0.1.1&2018/04/13&\begin{itemize}
   \item Bug fix: \dac{sprite} wouldn't build correctly
   \item Bug fix: misc bugs involving \dac{makeset}, \dac{buildset}, nohead and \dac{phead}
 \end{itemize}\\
+  v0.1.2&2018/04/17&\begin{itemize}
+    \item Fixed bug that \dac{select} and \dac{exclude} not working as expected.
+    \item Added \dac{ShowNumbers} for displaying numbers related to use in \dac{select} and \dac{exclude}
+  \end{itemize}\\
 \end{tabularx}
